retrieveOutputPkg/objects/Internet_of_things__c.object
<CustomObject>
    <fields>
        <fullName>Costing_Range__c</fullName>
        <label>Costing Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000-2000</fullName>
                </value>
                <value>
                    <fullName>2000-3000</fullName>
                </value>
                <value>
                    <fullName>3000-4000</fullName>
                </value>
                <value>
                    <fullName>5000-6000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_MDR__c</fullName>
        <label>Internet</label>
        <referenceTo>Internet__c</referenceTo>
        <relationshipLabel>Internet of things</relationshipLabel>
        <relationshipName>Internet_of_things</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Things__c</fullName>
        <displayFormat>T-{00000}</displayFormat>
        <label>Things</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>What_falls_under_IOT__c</fullName>
        <label>What falls under IOT?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Costing_Range__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autonomous farming equipment.</fullName>
                </value>
                <value>
                    <fullName>Biometric cybersecurity scanners.</fullName>
                </value>
                <value>
                    <fullName>Connected appliances.</fullName>
                </value>
                <value>
                    <fullName>Smart factory equipment.</fullName>
                </value>
                <value>
                    <fullName>Smart home security systems.</fullName>
                </value>
                <value>
                    <fullName>Ultra-high speed wireless internet.</fullName>
                </value>
                <value>
                    <fullName>Wearable health monitors.</fullName>
                </value>
                <value>
                    <fullName>Wireless inventory trackers.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internet of things</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internet of things Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internet of things</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>